[gd_scene load_steps=3 format=3 uid="uid://bau0byp2es6fk"]

[ext_resource type="Texture2D" uid="uid://byu7y4ilhjfni" path="res://assets/sprites/track_cards/start_finish_card.png" id="1_cdqlh"]
[ext_resource type="Script" path="res://scenes/start_finish_card.gd" id="1_s0j6c"]

[node name="StartFinishCard" type="Node2D"]
script = ExtResource("1_s0j6c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cdqlh")

[node name="CircuitLinks" type="Node2D" parent="."]

[node name="CircuitLink1" type="Marker2D" parent="CircuitLinks"]
position = Vector2(-64, 32)

[node name="CircuitLink2" type="Marker2D" parent="CircuitLinks"]
position = Vector2(64, 32)

[node name="StartFinishLink" type="Marker2D" parent="CircuitLinks"]
position = Vector2(0, 32)
